--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;Database=RestaurantContext;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Key": "SuperSecretJwtKeyForJwtBearerForAdmins",
+    "Issuer": "www.ourdomain.com/",
+    "Audience":  "www.ourdomain.com/"
   }
 }
